# boxer-core

./: Cargo.toml
.github/workflows/: build.yaml  release.yaml
src/: contracts.rs  lib.rs  models.rs  testing.rs
src/configuration/models/: mod.rs  repository_settings.rs
src/contracts/: dynamic_claims_collection.rs  internal_token.rs
src/contracts/internal_token/: encrypted_token.rs  v1.rs  v2.rs
src/contracts/internal_token/v1/: boxer_claims.rs  token.rs
src/contracts/internal_token/v2/: boxer_claims.rs  internal_token.rs
src/http/: conversions.rs  middleware.rs  mod.rs  readiness.rs
src/http/extractors/: boxer_claims.rs
src/http/middleware/: audit.rs  extract_external_token.rs  extract_internal_token.rs  logging.rs  request_with_token_id.rs  tracer.rs
src/http/middleware/audit/: audit_recorder.rs  audit_scope.rs  audited_error.rs  audited_request.rs  audited_response.rs  begin_audit_chain.rs  external_request.rs  external_token.rs  internal_request.rs  tests.rs
src/http/middleware/extract_external_token/: external_token_error.rs  request_with_token_id.rs  token_with_id.rs
src/http/middleware/tracer/: tracer_factory.rs  tracer_middleware_factory.rs
src/http/readiness/: tests.rs
src/models/: external_token.rs
src/models/external_token/: tests.rs
src/services/: audit.rs  backends.rs  mod.rs  observability.rs  service_provider.rs
src/services/audit/: audit_facade.rs  chained.rs  events.rs  log_audit_service.rs  resource_delete_audit_event.rs  resource_modification_audit_event.rs
src/services/audit/audit_facade/: tests.rs  to_audit_record.rs
src/services/audit/chained/: audit_event.rs  chained_audit_event.rs  event_chain.rs  token_audit_event.rs
src/services/backends/: kubernetes.rs  memory.rs
src/services/base/: mod.rs  types.rs  upsert_repository.rs
src/services/observability/: composed_logger.rs  open_telemetry.rs
src/testing/: api_client_context.rs  api_extensions.rs  spin_lock_kubernetes_resource_manager_context.rs  temp_namespace_context.rs  versioned_kubernetes_resource_manager_context.rs
(+86 files in other folders)
