[package]
name = "boxer_core"
version = "0.1.0"
edition = "2024"

[features]
testing = []

[dependencies]

# Kubernetes dependencies
kube = { version = "0.99.0", features = ["config", "client", "runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }

# Other dependencies
anyhow = "1.0.86"
async-trait = "0.1.88"
cedar-policy = "4.4.0"
futures = "0.3.31"
log = { version = "0.4.22", features = ["kv"] }
serde = { version = "1.0.219", features = ["derive"] }
maplit = "1.0.2"
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
serde_yml = "0.0.12"
schemars = "0.8.6"
assert_matches = "1.5.0"
test-context = "0.4.1"
actix-web = "4.11.0"
duration-string = { version = "0.5.2", features = ["serde"] }
regex = "1.11.1"
jwt = "0.16.0"
base64 = "0.22.1"
futures-util = "0.3.31"
env_filter = "0.1.3"

# Open Telemetry dependencies
opentelemetry = "0.30.0"
opentelemetry-appender-log = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-appender-tracing = "0.30.1"

[dev-dependencies]
serde_yml = "0.0.12"